--- a/solarathon/assets/style.css
+++ b/solarathon/assets/style.css
@@ -1,22 +1,8 @@
-/* Example of how to change the color of the label in a v-input */
-
-.v-input label.v-label {
-    color:black;
- }
-
- /* workaround for an issue in solara */
- .solara-autorouter-content {
-    height: 100%;
- }
-
- * {
-   font-family: Tahoma !important;
- }
 
  .v-card {  
    background:#fff;
    color:#1c1e21;
-   line-height:1.34;
+   /* direction:ltr; */
    font-family:Helvetica, Arial, sans-serif;
    font-size:12px;
  }
