--- a/solarathon/assets/custom.css
+++ b/solarathon/assets/custom.css
@@ -23,3 +23,18 @@
    border-style: solid !important;
    border-width: 1px;
  }
+
+/* On mouse-over, add a deeper shadow */
+.faqcard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2) !important;
+}
+
+/* Add some padding inside the faqcard container */
+
+
+.faqbutton {
+ /* Add shadows to create the "faqcard" effect */
+ box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+ transition: 0.3s;
+ height: 12px;
+}
